--- a/index.html
+++ b/index.html
@@ -55,42 +55,43 @@
                     <!-- <use class="mob-menu-svg2" href="./images/svg/mob-menu.svg#icon-close"></use> -->
                 </svg>
             </button>
+            <!-- Мобільне меню -->
+            <div class="menu-container js-menu-container" id="mobile-menu">
+                <button class="mob-menu-btn mob-menu-close js-close-menu">
+                    <svg class="mob-menu-svg" width="40" height="40">
+                        <use class="mob-menu-svg2" href="./images/svg/mob-menu.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <ul class="mob-menu_list ">
+                    <li class="mob-menu_item"><a class="link mob-menu__link mob-menu__accent-link"
+                            href="./index.html">Студія</a>
+                    </li>
+                    <li class="mob-menu_item"><a class="link mob-menu__link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="mob-menu_item"><a class="link mob-menu__link" href="./index.html">Контакти</a></li>
+                </ul>
+                <div class="mob-menu__contact">
+                    <ul class="">
+                        <li class="mob-menu-item__tel"><a class="link mob-menu__tel" href="tel:+380961111111">
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                        <li class="mob-menu-item__mail"><a class="link  mob-menu__mail"
+                                href="mailto:spolonchuk@gmail.com">
+                                info@devstudio.com
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="mob-menu-social">
+                        <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">Instagram</a></li>
+                        <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">Twitter</a></li>
+                        <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">Facebook</a></li>
+                        <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- ----- -->
         </div>
     </header>
-
-    <!-- Мобільне меню -->
-    <div class="menu-container js-menu-container" id="mobile-menu">
-        <button class="mob-menu-btn mob-menu-close js-close-menu">
-            <svg class="mob-menu-svg" width="40" height="40">
-                <use class="mob-menu-svg2" href="./images/svg/mob-menu.svg#icon-close"></use>
-            </svg>
-        </button>
-        <ul class="mob-menu_list ">
-            <li class="mob-menu_item"><a class="link mob-menu__link mob-menu__accent-link"
-                    href="./index.html">Студія</a></li>
-            <li class="mob-menu_item"><a class="link mob-menu__link" href="./portfolio.html">Портфоліо</a></li>
-            <li class="mob-menu_item"><a class="link mob-menu__link" href="./index.html">Контакти</a></li>
-        </ul>
-        <div class="mob-menu__contact">
-            <ul class="">
-                <li class="mob-menu-item__tel"><a class="link mob-menu__tel" href="tel:+380961111111">
-                        +38 096 111 11 11
-                    </a>
-                </li>
-                <li class="mob-menu-item__mail"><a class="link  mob-menu__mail" href="mailto:spolonchuk@gmail.com">
-                        info@devstudio.com
-                    </a>
-                </li>
-            </ul>
-            <ul class="mob-menu-social">
-                <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">Instagram</a></li>
-                <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">Twitter</a></li>
-                <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">Facebook</a></li>
-                <li class="mob-menu-social_item"><a class="link mob-menu-social_link" href="">LinkedIn</a></li>
-            </ul>
-        </div>
-    </div>
-    <!-- ----- -->
 
     <main>
         <!-- Герой -->
